2012-02-06  Robert Larice
 * src/frontend/parser/complete.c :
   drop (char*) cast in the third argument of ioctl()

2012-02-06  Robert Larice
 * src/frontend/outitf.c ,
 * src/frontend/spiceif.c ,
 * src/frontend/subckt.c ,
 * src/frontend/plotting/graf.c ,
 * src/spicelib/analysis/cktnames.c ,
 * src/spicelib/devices/hisim2/hsm2noi.c ,
 * src/spicelib/devices/hisimhv/hsmhvnoi.c ,
 * src/spicelib/parser/ifnewuid.c ,
 * src/spicelib/parser/inpptree.c ,
 * src/xspice/mif/mifsetup.c :
   drop some more casts

2012-02-06  Robert Larice
 * src/spicelib/analysis/analysis.c ,
 * src/spicelib/devices/urc/urcsetup.c :
   drop some casts

2012-02-06  Robert Larice
 * src/xspice/cm/cm.c ,
 * src/xspice/evt/evtsetup.c ,
 * src/xspice/evt/evttermi.c ,
 * src/xspice/mif/mifconvt.c ,
 * src/xspice/mif/mifload.c ,
 * src/xspice/mif/mifsetup.c :
   drop some (char*) casts

2012-02-06  Robert Larice
 * src/include/ngspice/inpdefs.h ,
 * src/spicelib/parser/inplkmod.c :
   rewrite INPlookMod(), return INPmodel*/NULL instead of int 1/0

2012-02-06  Robert Larice
 * src/frontend/com_compose.c ,
 * src/frontend/define.c ,
 * src/frontend/device.c ,
 * src/frontend/inpcom.c ,
 * src/frontend/parse.c ,
 * src/frontend/vectors.c ,
 * src/frontend/parser/complete.c ,
 * src/frontend/parser/unixcom.c ,
 * src/frontend/wdisp/windisp.c ,
 * src/include/ngspice/ngspice.h ,
 * src/spicelib/parser/inpptree.c :
   use strchr() instead of index()
     which is depreciated

============================ ngspice-24 ==================================
2012-01-30  Dietmar Warning
 * src/spicelib/devices/dio/diotemp.c: Add temperature dependent
   junction potentials also for tlevc=1 capacitor temperature model

2012-01-28  Robert Larice
 * src/include/ngspice/ngspice.h :
  define NAN for non C99 environments

2012-01-28  Holger Vogt
 * configure.ac, compile_min.sh: prepare for release 24
 * mifdelete.c: prevent crash upon 'reset', if codemodel is an array
   FIXME: leads to small memory leak
