@@ -1,4 +1,8 @@
 2012-02-06  Robert Larice
+ * src/frontend/terminal.c :
+  drop tgetstr() return value cast
+
+2012-02-06  Robert Larice
  * src/frontend/parser/complete.c :
    drop (char*) cast in the third argument of ioctl()
 
